--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "material-ui-icons": "^1.0.0-beta.35",
     "mobx": "^3.6.1",
     "mobx-react": "^4.4.2",
-    "moment": "^2.20.1"
+    "moment": "^2.20.1",
+    "react-router-dom": "^4.2.2"
   },
   "peerDependencies": {}
 }
