--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
+    "@types/axios": "^0.14.0",
+    "axios": "^0.18.0",
     "fscreen": "^1.0.2",
     "gsap": "^1.20.4",
     "material-ui": "^1.0.0-beta.35",
