--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "@types/axios": "^0.14.0",
+    "@types/gsap": "^1.19.2",
     "axios": "^0.18.0",
     "fscreen": "^1.0.2",
     "gsap": "^1.20.4",
